# QbychatClient

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
oauth2/: oauth2.cpp  oauth2.h
